# rshtml

./: Cargo.toml  README.md  SHORT TEARM GOALS.md
src/: header.rs  implementation.rs  lib.rs  util.rs
tests/: integration.rs
tests/input/multi_file/: about.html  index.html
tests/input/multi_file/subpages/: page1.html  page2.html
tests/output/multi_file/: pages.rs
tests/output/single_file/: pages.rs
tests/snapshots/: integration__multi_file.snap  integration__single_file.snap
tests/templates/: basic_in.html  basic_out.html
