[package]
name = "rshtml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = {version = "0.2", git = "https://gitlab.com/technologicalMayhem/codegen"}
regex = "1"
thiserror = "1"
lazy_static = "1"
prettyplease = "0.1"
minify = "1.2"